deployments/elasticsearch-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch-deployment
  template:
    metadata:
      labels:
        app: elasticsearch-deployment
    spec:
      containers:
        - name: elasticsearch-deployment
          image: chamathranaweera/elasticsearch-service:dev
          imagePullPolicy: Always
          ports:
          - containerPort: 7000
          # livenessProbe:
          #   httpGet:
          #     path: /user/api/v1/user-service
          #     port: 8000
          #   initialDelaySeconds: 300
          #   periodSeconds: 300
          #   failureThreshold: 2
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  selector:
    app: elasticsearch-deployment
  ports:
    - name: elastic-port
      protocol: TCP
      port: 7000
      targetPort: 7000
  type: ClusterIP
